vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_expression-2.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"lib.pkg.sig\")"
---
ActualPart
  ActualPartExpression
    NameExpression
      Name
        Identifier 'lib'
        SelectedName
          Dot
          Identifier 'pkg'
        SelectedName
          Dot
          Identifier 'sig'
