vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_expression-3.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"a + b * 2\")"
---
ActualPart
  ActualPartExpression
    BinaryExpression
      NameExpression
        Name
          NameDesignatorPrefix
            Identifier 'a'
      Plus
      BinaryExpression
        NameExpression
          Name
            NameDesignatorPrefix
              Identifier 'b'
        Times
        LiteralExpression
          AbstractLiteral '2'
