vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_expression-4.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"-foo\")"
---
ActualPart
  ActualPartExpression
    UnaryExpression
      Minus
      NameExpression
        Name
          Identifier 'foo'
