vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_expression-5.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"(foo) + 1\")"
---
ActualPart
  ActualPartExpression
    BinaryExpression
      ParenthesizedExpressionOrAggregate
        LeftPar
        ElementAssociationList
          ElementAssociation
            NameExpression
              Name
                NameDesignatorPrefix
                  Identifier 'foo'
        RightPar
      Plus
      LiteralExpression
        AbstractLiteral '1'
