vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_expression-6.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"(a, b, c)\")"
---
ActualPart
  ActualPartExpression
    ParenthesizedExpressionOrAggregate
      LeftPar
      ElementAssociationList
        ElementAssociation
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'a'
        Comma
        ElementAssociation
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'b'
        Comma
        ElementAssociation
          NameExpression
            Name
              NameDesignatorPrefix
                Identifier 'c'
      RightPar
