vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_expression.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"42\")"
---
ActualPart
  ActualPartExpression
    LiteralExpression
      AbstractLiteral '42'
