vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_expression_inertial.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"inertial a + 1\")"
---
ActualPart
  Keyword(Inertial)
  ActualPartExpression
    BinaryExpression
      NameExpression
        Name
          Identifier 'a'
      Plus
      LiteralExpression
        AbstractLiteral '1'
