vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_expression_qualified.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"T'(1, 2, 3)\")"
---
ActualPart
  ActualPartExpression
    QualifiedExpression
      Name
        NameDesignatorPrefix
          Identifier 'T'
      Tick
      ParenthesizedExpressionOrAggregate
        LeftPar
        ElementAssociationList
          ElementAssociation
            LiteralExpression
              AbstractLiteral '1'
          Comma
          ElementAssociation
            LiteralExpression
              AbstractLiteral '2'
          Comma
          ElementAssociation
            LiteralExpression
              AbstractLiteral '3'
        RightPar
