vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_expression_type_conversion_shape.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"std_ulogic(p)\")"
---
ActualPart
  ActualPartExpression
    NameExpression
      Name
        Identifier 'std_ulogic'
        ParenthesizedName
          LeftPar
          AssociationList
            AssociationElement
              ActualPart
                ActualPartExpression
                  NameExpression
                    Name
                      Identifier 'p'
          RightPar
