vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__interface__tests__actual_part_inertial_open.snap
---
source: vhdl_syntax/src/parser/productions/interface.rs
expression: "to_test_text(Parser::actual_part, \"inertial open\")"
---
ActualPart
  Keyword(Inertial)
  ActualPartOpen
    Keyword(Open)
